Fixed filter for delivery_status